--- a/index.html
+++ b/index.html
@@ -158,8 +158,12 @@
             <button class="btn-primary" onclick="restartExperience()">Experience Again 🔄</button>
             <button class="btn-secondary send-loves-btn" onclick="sendLoves()">Send Loves ❤️</button>
         </div>
+
+            <p class="copyright-text">&copy; Created by MD Arman Uddin Shiam</p>
+        
     </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
